# Chip

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_conversation.py  test_local.py  test_manual.ps1
app/: __init__.py  config.py
app/adapters/: loop.py  registry.py  twilio.py
app/agents/: __init__.py  langchain_agent.py
app/routers/: agent_test.py  health.py  messaging.py  messaging_hybrid_example.py
app/services/: __init__.py  conversation_history.py  submission_service.py  supabase_rag.py  temporal_client.py  user_service.py
app/temporal/: __init__.py  activities.py  schedules.py  worker.py  workflows.py
app/types/: __init__.py  api.py  enums.py  events.py  messages.py  protocols.py  results.py
app/utils/: __init__.py  spelling.py
server/: __init__.py  app.py  config.py  logging_config.py
server/routes/: __init__.py
tests/: README.md  conftest.py  test_agent_route.py  test_health.py  test_loop_adapter.py  test_loop_normalize.py  test_registry.py  test_webhook_errors.py  test_webhook_loop.py
tests/fixtures/: loop_events.py
